<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioAnnotator</string>
    <string name="title_section3">Section 3</string>
    <string name="strSourceUrl">Audio URL</string>
    <string name="strSourceFile">Audio File</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="strTitle">AudioAnnotator</string>
    <string name="strSelectSource">Select Source</string>
    <string name="strUrlPlayAudio">Play Audio</string>
    <string name="title_activity_player">PlayerActivity</string>

</resources>