<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/strTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroupSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioSourceFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSourceFile" 
            android:onClick="onRadioSourceFileClicked" />

        <RadioButton
            android:id="@+id/radioSourceUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/strSourceUrl" 
            android:onClick="onRadioSourceUrlClicked" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/strSelectSource"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroupSource"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="http://"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonUrlGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/editTextUrl"
        android:text="@string/strUrlPlayAudio" 
        android:onClick="onButtonUrlGoClicked"/>

    <MediaController
        android:id="@+id/mediaController1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonUrlGo"
        android:layout_below="@+id/buttonUrlGo"
        android:layout_marginTop="30dp" >
    </MediaController>

</RelativeLayout>